# cucu

./: CLAUDE.md  CMakeLists.txt  README.md  plan.md
docs/: ANALYSIS_GUIDE.md
docs/education/: 00_서론_및_학습_안내.md  01_사전지식_GPU_아키텍처.md  02_사전지식_CUDA_프로그래밍_기초.md  03_사전지식_행렬곱셈_수학적_배경.md  04_Level0_나이브_구현.md  05_Level1_메모리_코얼레싱.md  06_Level2_공유_메모리_타일링.md  07_Level3_레지스터_블로킹.md  08_Level4_더블_버퍼링.md  09_Level5_비동기_복사.md  10_종합_성능분석_및_프로파일링.md  11_부록_용어_사전.md  12_부록_퀴즈_정답.md  13_부록_시뮬레이션_가이드.md
docs/gamification/: 01_게임화_개요.md  02_재화_및_경제_시스템.md  03_게임_메커니즘.md  04_이력_및_포트폴리오.md  05_동기_설계.md  06_기술_구현_가이드.md
game/: app.js  data.js  gpu_architect.html  index.html
include/: cuda_driver_wrapper.hpp  sgemm_kernels.hpp
scripts/: build.sh  compile_ptx.sh
src/benchmark/: benchmark_runner.cpp  cublas_reference.cu  main.cpp  test_correctness.cpp
src/driver/: cuda_driver.cpp  kernel_launcher.cpp  memory_manager.cpp
src/kernels/: sgemm_async_copy.cu  sgemm_coalesced.cu  sgemm_double_buffer.cu  sgemm_naive.cu  sgemm_register_blocking.cu  sgemm_tiled.cu
